# rust-cowboyz

./: .gitignore  .tmp_comment_107.md  .tmp_comment_108.md  BUG-INVESTIGATION-001.md  BUG-INVESTIGATION-002.md  BUG-INVESTIGATION-003.md  BUG-INVESTIGATION-004.md  BUILD.md  CLAUDE.md  CREATIVE_LEAD_SUMMARY.md  Cargo.toml  README.md  Trunk.toml  config-instructions.md  gemini.md  index.html  issue-132-comment.md  issue-134-comment.md  mvp.md  plan-analysis.md  plan.md  playwright.config.js  qwen.md  test-01-game-loads.js  verify-bugs.js  verify-fix.js
.claude/agents/: design-specialist.md  game-designer.md  playtester.md  project-manager.md  qa-tester.md  software-architect.md  software-engineer.md  technical-lead.md
.qwen/: issue114_comment.md  issue114_fix_status.md  issue117_update.md  issue118_content.md  technical_review_92.md
.qwen/agents/: game-designer.md  playtester.md  project-manager.md  qa-tester.md  software-architect.md  software-engineer.md  technical-lead.md
agent-design/: README.md  architect-designer.md  build-deployer.md  creative-lead.md  design-specialist.md  software-engineer.md  systems-analyst.md  technical-lead.md
data/: commodities-supply-demand.md
docs/: agent-interactions.md  basic-interactions.md  wip.md
playtest/: 001-market-panel-prices.md  01-game-loads-to-opening-screen.md  02-orbital-mechanics-system.md  03-planet-selection-next-turn-bugs.md  04-market-panel-planet-selection.md  scenario-001-duplicate-ui.md  scenario-001-planet-orbital-motion.md
src/: events.rs  game_state.rs  lib.rs  main.rs  main_web.rs  setup.rs
tests/: README.md  travel-flow.spec.js  web_integration_tests.rs
(+67 files in other folders)
