[package]
name = "rust-cowboyz"
version = "0.1.0"
edition = "2021"

[lib]
name = "cowboyz"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rust-cowboyz"
path = "src/main.rs"

[[bin]]
name = "cowboyz-web"
path = "src/main_web.rs"
required-features = ["web"]

[dependencies]
rand = "0.8"
getrandom = { version = "0.2", default-features = false, features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.3"
clap = { version = "4.0", features = ["derive"], optional = true }
shlex = "1.3"

# Web/WASM dependencies
leptos = { version = "0.6", optional = true }
leptos_meta = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "Storage",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "HtmlCanvasElement",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Performance",
    "MouseEvent",
    "DomRect",
] }
gloo = { version = "0.10", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"

[features]
default = ["cli"]
cli = ["dep:clap"]
web = ["dep:leptos", "leptos/csr", "dep:leptos_meta", "dep:console_error_panic_hook", "dep:wasm-bindgen", "dep:web-sys", "dep:gloo", "dep:js-sys", "ui"]
ui = []
